<?xml version="1.0" ?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>dev.vepo</groupId>
    <artifactId>graph-parent</artifactId>
    <version>1.0.0</version>
    <name>OpenJFX :: Graph</name>
    <description>A generic (Java FX) graph visualization library that can automatically arrange the vertices' locations through a force-directed algorithm in real-time.</description>
    <packaging>pom</packaging>

    <properties>
        <java.version>17</java.version>
        <jacoco.version>0.8.10</jacoco.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <sonar.organization>vepo-github</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit/</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Bruno Silva</name>
            <email>brunomnsilva@gmail.com</email>
            <organization>brunomnsilva</organization>
            <organizationUrl>http://www.brunomnsilva.com</organizationUrl>
        </developer>
        <developer>
            <name>Victor Osório</name>
            <email>victor.perticarrari@gmail.com</email>
            <organization>vepo</organization>
            <organizationUrl>https://blog.vepo.dev/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/vepo/openjfx-graph.git</connection>
        <developerConnection>scm:git:ssh://github.com:vepo/openjfx-graph.git</developerConnection>
        <url>http://github.com/vepo/openjfx-graph/tree/master</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>openjfx-graph</module>
        <module>samples</module>
    </modules>

    <dependencies>
        <!-- Tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <!-- For Maven Central deployment -->
                <plugin>
                    <groupId>org.sonatype.plugins</groupId>
                    <artifactId>nexus-staging-maven-plugin</artifactId>
                    <version>1.6.7</version>
                    <extensions>true</extensions>
                    <configuration>
                        <serverId>ossrh</serverId>
                        <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
